[gd_scene load_steps=16 format=3 uid="uid://buo80p043s8vx"]

[ext_resource type="Script" path="res://assets/scripts/enemy.gd" id="1_54rww"]
[ext_resource type="Material" uid="uid://cljeq7tk2vtjf" path="res://assets/custom_sprite_3d.material" id="2_d5878"]
[ext_resource type="Script" path="res://assets/scripts/interactor.gd" id="2_r607x"]
[ext_resource type="AudioStream" uid="uid://g1afvhbbk1ho" path="res://assets/freedoom/sounds/dsradio_loop.wav" id="3_lppot"]
[ext_resource type="Script" path="res://assets/scripts/dissolve.gd" id="4_ndruh"]
[ext_resource type="AudioStream" uid="uid://cwnm36p6oau7a" path="res://assets/freedoom/sounds/dsposit1.wav" id="6_tqxgk"]
[ext_resource type="AudioStream" uid="uid://c6h8y0tsmjm48" path="res://assets/freedoom/sounds/dsposit2.wav" id="7_6joq8"]
[ext_resource type="AudioStream" uid="uid://cfbirm6lrmrh3" path="res://assets/freedoom/sounds/dsposit3.wav" id="8_m1v07"]
[ext_resource type="AudioStream" uid="uid://l6jxgkh53tvr" path="res://assets/freedoom/sounds/dssgtatk.wav" id="9_5y2e4"]
[ext_resource type="AudioStream" uid="uid://bcx8otmfjlvm6" path="res://assets/freedoom/sounds/dsbgdth1.wav" id="9_cujgp"]
[ext_resource type="AudioStream" uid="uid://bp0opxt37n3oc" path="res://assets/freedoom/sounds/dsbgdth2.wav" id="10_7ayfj"]
[ext_resource type="Texture2D" uid="uid://ddjv0yl6wci3i" path="res://assets/textures/camera_outline.png" id="12_d4r8s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8gtp5"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_r6jq4"]
streams_count = 3
stream_0/stream = ExtResource("6_tqxgk")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_6joq8")
stream_1/weight = 1.0
stream_2/stream = ExtResource("8_m1v07")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jn8pe"]
streams_count = 2
stream_0/stream = ExtResource("9_cujgp")
stream_0/weight = 1.0
stream_1/stream = ExtResource("10_7ayfj")
stream_1/weight = 1.0

[node name="Enemy" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 4
script = ExtResource("1_54rww")

[node name="Dissolve" type="GeometryInstance3D" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
rotation_edit_mode = 0
rotation_order = 2
top_level = false
visible = true
visibility_parent = NodePath("")
layers = 1
sorting_offset = 0.0
sorting_use_aabb_center = true
material_override = null
material_overlay = null
transparency = 0.0
cast_shadow = 1
extra_cull_margin = 0.0
custom_aabb = AABB(0, 0, 0, 0, 0, 0)
lod_bias = 1.0
ignore_occlusion_culling = false
gi_mode = 1
gi_lightmap_scale = 0
visibility_range_begin = 0.0
visibility_range_begin_margin = 0.0
visibility_range_end = 0.0
visibility_range_end_margin = 0.0
visibility_range_fade_mode = 0
script = ExtResource("4_ndruh")

[node name="SFX" type="AudioStreamPlayer3D" parent="Dissolve"]
stream = ExtResource("3_lppot")
pitch_scale = 0.3

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_8gtp5")

[node name="Sprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
layers = 2
material_override = ExtResource("2_d5878")
pixel_size = 0.05
billboard = 2
shaded = true
alpha_cut = 2
texture_filter = 0
animation = &""
autoplay = "walk_1"

[node name="InvisibleSprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
material_override = ExtResource("2_d5878")
cast_shadow = 0
modulate = Color(0, 0, 0, 0.235294)
pixel_size = 0.05
billboard = 2
alpha_cut = 2
texture_filter = 0
animation = &""
autoplay = "walk_1"

[node name="NavAgent" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
neighbor_distance = 10.0
max_speed = 4.0

[node name="Interactor" type="Node3D" parent="."]
script = ExtResource("2_r607x")

[node name="SFX" type="Node3D" parent="."]

[node name="IdleGrunt" type="AudioStreamPlayer3D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_r6jq4")
emission_angle_enabled = true

[node name="Death" type="AudioStreamPlayer3D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_jn8pe")
emission_angle_enabled = true

[node name="Attack" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("9_5y2e4")
emission_angle_enabled = true

[node name="Outline" type="Sprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 0, 0)
visible = false
layers = 2
billboard = 2
no_depth_test = true
texture_filter = 0
render_priority = 1
texture = ExtResource("12_d4r8s")
